--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ alembic = "^1.13.1"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.9"
+psycopg = {extras = ["binary"], version = "^3.1.18"}
 
 
 [tool.poetry.group.dev.dependencies]
