--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,11 +1,14 @@
 name: Pipeline
-on: [push, pull_request]
+on: [push , pull_request]
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Copia os arquivos do repositório
+        uses: actions/checkout@v3
+
       - name: Instalar o python
         uses: actions/setup-python@v5
         with:
